# Data-Normalization-Toolkit

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
data/1-CSV-Raw/: test_input_sample.csv
data/2-CSV-Export/: test_input_sample_CLEANED.csv
data/3-SQLite-Export/: test_input_sample_CLEANED.db
docs/: CHANGELOG.md
normalizer/: cleaner.py  config_builder.py  config_loader.py  file_selector.py  reporter.py  rules.py  sql_exporter.py
reports/: run_20250703_1759.html
templates/: report_template.html
tests/: test_cleaner.py  test_config_builder.py  test_end_to_end.py  test_rules.py
